test/gpu/native/assertOnFailToGpuizeAttr.3.good
assertOnFailToGpuizeAttr.chpl:36: error: Loop is marked with @assertOnGpu but is not eligible for execution on a GPU
assertOnFailToGpuizeAttr.chpl:9: note: called function has outer var access
assertOnFailToGpuizeAttr.chpl:37: note:   reached via call to 'usesOutsideVar' in loop body here
